# Gwen2.5-3B-100Samples-SFT-GRPO

./: .gitattributes  .gitignore  2_FineTuning.ipynb  4_merge_gguf_hf.ipynb  CARDMODEL.md  FINETUNING_SUMMARY.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
gwen25/: __init__.py  cli.py
gwen25/notebooks/: __init__.py  final_eval_base_50s_100s.py  finetuning.py  merge_gguf_hf.py  nlp_eda.py  ollama_hf.py
gwen25/pipelines/: eda.py  evaluate.py  export.py  hparam_sweep.py  hyperparams.py  ollama.py  train.py
notebook_output/: 1_NLP_EDA.ipynb  3_FinalEval_Base_50S_100S.ipynb  5_OllamaHF.ipynb
requirements/: base.txt  convert_export.txt  eval.txt  nlp_eda.txt  ollama.txt  train.txt
scripts/: export_notebooks.py
tests/: test_hparam_sweep.py
